Fix myths section width on mobile
It was too wide causing a horizontal scroll to appear.

--- a/app/assets/stylesheets/_responsive.scss
+++ b/app/assets/stylesheets/_responsive.scss
@@ -265,6 +265,7 @@
     }
     section#myths {
       padding-top: 0;
+      max-width: 90%;
       header {
         @extend %section-header-override;
       }
